--- a/BFB/src/main/java/BFB/GUI/frmBase.form
+++ b/BFB/src/main/java/BFB/GUI/frmBase.form
@@ -2528,10 +2528,11 @@
                         <Component class="javax.swing.JComboBox" name="cmbMotive">
                           <Properties>
                             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-                              <StringArray count="3">
+                              <StringArray count="4">
                                 <StringItem index="0" value="Any Motive"/>
                                 <StringItem index="1" value="Biped"/>
                                 <StringItem index="2" value="Quad"/>
+                                <StringItem index="3" value="LAM"/>
                               </StringArray>
                             </Property>
                           </Properties>
