--- a/ssw/src/main/java/ssw/gui/frmMainWide.form
+++ b/ssw/src/main/java/ssw/gui/frmMainWide.form
@@ -1075,9 +1075,10 @@
                 <Component class="javax.swing.JComboBox" name="cmbMotiveType">
                   <Properties>
                     <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-                      <StringArray count="2">
+                      <StringArray count="3">
                         <StringItem index="0" value="Biped"/>
                         <StringItem index="1" value="Quad"/>
+                        <StringItem index="2" value="LAM"/>
                       </StringArray>
                     </Property>
                     <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
